Develop GUI panels

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,27 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PRG381_Milestone_1
 excludes=
+file.reference.CustomDatePicker.jar=lib\\CustomDatePicker.jar
+file.reference.flatlaf-3.6.jar=lib\\flatlaf-3.6.jar
+file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
+file.reference.LGoodDatePicker-11.2.1.jar=lib\\LGoodDatePicker-11.2.1.jar
+file.reference.miglayout-core-11.0.jar=lib\\miglayout-core-11.0.jar
+file.reference.miglayout-swing-11.0.jar=lib\\miglayout-swing-11.0.jar
+file.reference.swing-datetime-picker-2.1.2.jar=lib\\swing-datetime-picker-2.1.2.jar
+file.reference.WellnessDatePicker.jar=lib/WellnessDatePicker.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.flatlaf-3.6.jar}:\
+    ${file.reference.swing-datetime-picker-2.1.2.jar}:\
+    ${file.reference.miglayout-swing-11.0.jar}:\
+    ${file.reference.miglayout-core-11.0.jar}:\
+    ${file.reference.LGoodDatePicker-11.2.1.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.CustomDatePicker.jar}:\
+    ${file.reference.WellnessDatePicker.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -71,7 +87,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PRG381_Milestone_1
-main.class=
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -82,7 +98,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
