--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,13 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PRG381_Milestone_1.jar
+dist.jar=${dist.dir}/PRG381_Milestone_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/PRG381_Milestone_1
+dist.jlink.output=${dist.jlink.dir}/PRG381_Milestone_2
 excludes=
 file.reference.CustomDatePicker.jar=lib\\CustomDatePicker.jar
+file.reference.derby.jar=lib\\derby.jar
 file.reference.flatlaf-3.6.jar=lib\\flatlaf-3.6.jar
 file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.LGoodDatePicker-11.2.1.jar=lib\\LGoodDatePicker-11.2.1.jar
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.LGoodDatePicker-11.2.1.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.CustomDatePicker.jar}:\
-    ${file.reference.WellnessDatePicker.jar}
+    ${file.reference.WellnessDatePicker.jar}:\
+    ${file.reference.derby.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -86,7 +88,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=PRG381_Milestone_1
+jlink.launcher.name=PRG381_Milestone_2
 main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
