--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PRG381_Milestone_2
+application.vendor=MC
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,26 +33,19 @@ dist.jar=${dist.dir}/PRG381_Milestone_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PRG381_Milestone_2
+endorsed.classpath=
 excludes=
-file.reference.CustomDatePicker.jar=lib\\CustomDatePicker.jar
-file.reference.derby.jar=lib\\derby.jar
+file.reference.derby.jar=lib/derby.jar
+file.reference.derbyshared.jar=lib/derbyshared.jar
+file.reference.derbytools.jar=lib/derbytools.jar
 file.reference.flatlaf-3.6.jar=lib\\flatlaf-3.6.jar
-file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
-file.reference.LGoodDatePicker-11.2.1.jar=lib\\LGoodDatePicker-11.2.1.jar
-file.reference.miglayout-core-11.0.jar=lib\\miglayout-core-11.0.jar
-file.reference.miglayout-swing-11.0.jar=lib\\miglayout-swing-11.0.jar
-file.reference.swing-datetime-picker-2.1.2.jar=lib\\swing-datetime-picker-2.1.2.jar
 file.reference.WellnessDatePicker.jar=lib/WellnessDatePicker.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.6.jar}:\
-    ${file.reference.swing-datetime-picker-2.1.2.jar}:\
-    ${file.reference.miglayout-swing-11.0.jar}:\
-    ${file.reference.miglayout-core-11.0.jar}:\
-    ${file.reference.LGoodDatePicker-11.2.1.jar}:\
-    ${file.reference.jdatepicker-1.3.4.jar}:\
-    ${file.reference.CustomDatePicker.jar}:\
+    ${file.reference.derbyshared.jar}:\
+    ${file.reference.derbytools.jar}:\
     ${file.reference.WellnessDatePicker.jar}:\
     ${file.reference.derby.jar}
 # Space-separated list of extra javac options
